# prusaconnect-essentials

./: README.md  detect_print_sheet.py  main.py  pyproject.toml
handler/: detect_print_sheet.py  timelapse_handler.py  user_handler.py
lib/: camera_handler.py  direct_camera.py  empty_sheet_detection.py  gcode_handling.py  gcode_parse_call.py  job_handler.py  logs.py  metrics.py  prusa_connect.py  tag_detection.py
tests/: test_gcode_parse_call.py  test_gcode_parser.py  test_log_parser.py  test_metrics_parser.py
