[project]
name = "prusa-connect-essentials"
version = "0.1.0"
description = "Adds the missing bits to Prusa Connect"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "apriltag>=0.0.16",
    "opencv-python>=4.13.0.92",
    "prusa-connect-sdk-client[cli]>=1.0.0",
    "pybgcode-jneilliii>=0.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.28",
]
